@@ -5,5 +5,5 @@
 
 RELOCATION RECORDS FOR \[\.eh_frame\]:
 OFFSET           TYPE              VALUE 
-0*000001b SREL32            \.text
-0*000002c SREL32            \.text\+0x0*0000004
+0*000001c SREL32            \.text
+0*0000030 SREL32            \.text\+0x0*0000004
